fix: fix an overflow in the screen when you goes to movile screen

--- a/src/pages/NavBar.css
+++ b/src/pages/NavBar.css
@@ -1,4 +1,3 @@
-
 .navbar {
     display: flex;
     align-items: center;
@@ -6,6 +5,7 @@
     background-color: #E5B864;
     padding: 15px 30px;
     position: relative;
+    overflow-x: hidden;
 }
 
 .logo {
@@ -113,33 +113,39 @@
         order: 2;
     }
 
-    .menu {
-        position: absolute;
-        top: 65px;
-        right: -220px;
-        background-color: #E5B864;
-        flex-direction: column;
-        align-items: stretch;
-        width: 200px;
-        text-align: center;
-        padding: 15px 0;
-        gap: 15px;
-        border-radius: 8px;
+.menu {
+      position: fixed;
+      top: 65px;
+      right: -220px;
 
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
+      width: 200px;
+      height: calc(100vh - 65px);
 
-        transition: right 0.3s ease, opacity 0.2s ease;
-        z-index: 10;
-    }
+      background-color: #E5B864;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
 
-    .menu.open {
-        right: 0;
-        opacity: 1;
-        visibility: visible;
-        pointer-events: auto;
-    }
+      padding: 20px 0;
+      gap: 15px;
+
+      overflow-y: auto;  
+      -webkit-overflow-scrolling: touch;
+
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+
+      transition: right 0.3s ease, opacity 0.2s ease;
+      z-index: 1000;
+  }
+
+  .menu.open {
+      right: 0;
+      opacity: 1;
+      visibility: visible;
+      pointer-events: auto;
+  }
 
     .menu li {
         width: 100%;
